Make this project build again